--- a/.github/workflows/main-prod.yml
+++ b/.github/workflows/main-prod.yml
@@ -18,7 +18,7 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         script: |
           # Выполняет деплой
-          cd /var/www/front-dev/
+          cd /var/www/front/
           git pull
           mpm i
           ng build
