--- a/.github/workflows/main-prod.yml
+++ b/.github/workflows/main-prod.yml
@@ -20,5 +20,5 @@ jobs:
           # Выполняет деплой
           cd /var/www/front/
           git pull
-          mpm i
+          npm i
           ng build
