--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.2.0",
     "angular-animations": "^0.11.0",
     "ng-sidebar": "^9.4.3",
+    "ngx-image-cropper": "^5.0.1",
     "ngx-mask": "^13.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
