--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "angular-animations": "^0.11.0",
+    "angular8-yandex-maps": "^13.2.0",
     "ng-sidebar": "^9.4.3",
     "ngx-image-cropper": "^5.0.1",
     "ngx-mask": "^13.1.1",
